--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "node_ejs_boilerplate",
   "version": "1.0.0",
   "description": "Boilerplate showing the use of ejs as view template engine in a Node.js application",
+  "author": "Jennifer Bland",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,7 +15,10 @@
     "express",
     "boilerplate"
   ],
-  "author": "Jennifer Bland",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/ratracegrad/nodejs_ejs_boilerplate"
+  },
   "license": "MIT",
   "dependencies": {
     "ejs": "^2.4.1",
